data/derived/comb/progs/unify/prog2910.ml.out
Characters 82-83:
  | Sine(x) -> sin(pi*.x)
                       ^
Error: This expression has type expr but an expression was expected of type
         float
